# langgraph-agentflowkit

./: .gitignore
apps/agentflowkit-console/: README.md
apps/agentflowkit-console/api/: .env.example  README.md  pyproject.toml
apps/agentflowkit-console/api/agentflowkit_console_api/: __init__.py  agent_collaboration.py  agents.py  config.py  deepseek_flow.py  demo_flow.py  exporter.py  main.py  store.py
apps/agentflowkit-console/api/tests/: test_api.py
apps/agentflowkit-console/backend/: __init__.py  console_service.py  server.py
apps/agentflowkit-console/frontend/: app.js  index.html  styles.css
apps/agentflowkit-console/tests/: test_console_service.py
apps/agentflowkit-console/web/: index.html  package-lock.json  package.json
apps/agentflowkit-console/web/src/: main.jsx  styles.css
docs/: agentflowkit-ppt-outline.md
examples/agentflowkit/: README.md  grok_llm_planner_demo.py  grok_smoke_test.py  planner_react_demo.py
libs/agentflowkit/: LICENSE  Makefile  README.md  pyproject.toml
libs/agentflowkit/agentflowkit/: __init__.py  _immutability.py  engine.py  errors.py  graph.py  llm_planner.py  model_client.py  models.py  planner.py  registry.py  router.py  tracing.py
libs/agentflowkit/tests/: test_core.py  test_import.py  test_llm_planner.py  test_model_client.py
libs/cli/js-examples/: package.json
libs/cli/js-monorepo-example/: package.json
libs/cli/js-monorepo-example/apps/agent/: package.json
libs/sdk-py/: pyproject.toml
